# kicad-symbol-tool

./: README.md  main.py  pyproject.toml
src/kicad_symbol_tool/: __init__.py  cli.py  derived_parts_from_spreadsheet.py  sample_parsed_sexp.txt  symbol_file.py
src/kicad_symbol_tool/kicad_symlib_util/: __init__.py  symbol_file_class.py
test/: test_generate_spreadsheet.py  test_symbol_file.py  test_symbol_file_class.py  test_test.py
test/data/: My_Resistor-0805-out.kicad_sym  My_Resistor-0805-out.xlsx  My_Resistor-0805.kicad_sym  My_Resistor-0805.xlsx  My_Resistor-0805_updated.xlsx  output.xlsx
