[project]
name = "kicad-symbol-tool"
version = "0.1.0"
description = "A command-line tool that assists with managing KiCad part libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "sexpdata>=1.0.2",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
kicad-symbol-tool = "kicad_symbol_tool.cli:app"
